--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <label >Second Prediction</label>
       <p class="emotion_name" id="result_emotion_name2"></p>
-      <p class="emoji" id="update_emoji"> </p>
+      <p class="emoji" id="update_emoji2"> </p>
     </div>
 
 
